kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: figure-aggregator }
spec:
  replicas: 1
  selector: { matchLabels: { app: figure-aggregator } }
  template:
    metadata: { labels: { app: figure-aggregator } }
    spec:
      containers:
      - name: app
        image: gcr.io/reciept-scanner-431421/figure-aggregator:latest
        ports: [{ containerPort: 4000 }]
