kubernetes/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: { name: figure-aggregator }
spec:
  type: ClusterIP
  selector: { app: figure-aggregator }
  ports:
    - port: 80
      targetPort: 4000
