kubernetes/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "kevin-devops"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: figure-aggregator
            port:
              number: 80
